1999-04-08  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c: rewrite to use the event handler instead
	of a select loop.  Also, compress the index output using
	runcompress() instead of forking a compress ourselves.

1999-04-08  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (sendbackup_response): don't krb4 authenticate
	streams if krb4_auth if false.

1999-04-08  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (do_dump): some formatting cleanups.  Nuke
	'killerr' - we can do without it.

1999-04-08  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (do_dump): store compresspid inside of
	the databuf

1999-04-08  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (parse_info_line): parse info lines
	from sendbackup directly into the 'file' global.  Eliminate
	the backup_name, recover_cmd, and compress_suffix globals.
	* server-src/dumper.c (finish_tapeheader): nuke usage
	of above globals.  Nuke unneeded explicit nul terminations (we
	memset the whole thing in fn_init).

1999-04-08  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c (process_dumpline): rewrite to use strtok
	and const the argument.
	* server-src/dumper.c (make_tapeheader): rename to finish_tapeheader
	and prototype it.  Remove the 'type' arg, since it's always
	F_DUMPFILE.  Remove call to fn_init().
	* server-src/dumper.c (do_dump): call fh_init on 'file' while
	initializing globals.  Call finish_tapeheader after getting info
	endline.

1999-04-07 John R. Jackson  <jrj@purdue.edu>

	* tape-src/tapeio.c: allow tapedev to be /dev/null.
	* server-src/taper.c: allow tapedev to be /dev/null.
	* man/amanda.8.in: allow tapedev to be /dev/null.

1999-04-07  Mike Grupenhoff <kashmir@munge.com>

	* server-src/dumper.c: collect got_info_endline, got_sizeline,
	got_endline, and header_done into one bitmask global, and make it
	static.  Also, make 'file' static.

1999-04-06 Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
